Refactor NetconfMessageTransformer
We can side-step a few expensive methods, let's just do simple concats
and use enterSchemaTree() without an intermediate Absolute.

JIRA: NETCONF-817
Change-Id: Id5de2febd90d18348f29a07a49e77b2fa09d3ae0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>